hd-62 - Open API spec for delete a political party
