# src/storage/api-docs/api-docs.json
@@ -375,7 +375,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "List of political parties",
+                        "description": "Political party created",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -535,7 +535,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of political parties",
+                        "description": "Specific political party",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -673,6 +673,86 @@
                     }
                 ]
             },
+            "delete": {
+                "tags": [
+                    "Admin - Political Party"
+                ],
+                "summary": "Delete a specific political party",
+                "description": "Delete a specific political party",
+                "operationId": "deletePoliticalParty",
+                "parameters": [
+                    {
+                        "name": "political_party_id",
+                        "in": "path",
+                        "required": true,
+                        "example": "CECOL"
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "null"
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "description": "Delete a political party",
+                                            "type": "string",
+                                            "format": "text",
+                                            "example": "Unauthenticated"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "User without permission to the endpoint",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "description": "Delete a political party",
+                                            "type": "string",
+                                            "format": "text",
+                                            "example": "Permission denied."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Political party not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "description": "Delete a political party",
+                                            "type": "string",
+                                            "format": "text",
+                                            "example": "Political party not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            },
             "patch": {
                 "tags": [
                     "Admin - Political Party"
@@ -718,7 +798,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "List of political parties",
+                        "description": "Political party updated",
                         "content": {
                             "application/json": {
                                 "schema": {
